--- a/project.json
+++ b/project.json
@@ -19,7 +19,8 @@
     "MongoDB.Bson": "2.3.0-rc1",
     "Newtonsoft.Json": "9.0.1-beta1",
     "CsvHelper": "3.0.0-beta4",
-    "StackExchange.Redis": "1.1.605"
+    "StackExchange.Redis": "1.1.605",
+    "Npgsql.EntityFrameworkCore.PostgreSQL": "1.0.1"
   },
   "frameworks": {
     "netcoreapp1.0": {
