--- a/project.json
+++ b/project.json
@@ -17,12 +17,13 @@
     "MongoDB.Driver": "2.3.0-rc1",
     "MongoDB.Driver.Core": "2.3.0-rc1",
     "MongoDB.Bson": "2.3.0-rc1",
-    "Newtonsoft.Json": "9.0.1-beta1",
+    "Newtonsoft.Json": "9.0.1",
     "CsvHelper": "3.0.0-beta4",
     "StackExchange.Redis": "1.1.605",
     "Npgsql.EntityFrameworkCore.PostgreSQL": "1.0.1",
     "AMQPNetLite": "1.2.0",
-    "RabbitMQ.Client": "4.1.0-rc2"
+    "RabbitMQ.Client": "4.1.0-rc2",
+    "MySql.Data.EntityFrameworkCore": "7.0.5-ir21"
   },
   "frameworks": {
     "netcoreapp1.0": {
