Adding ElasticSearch Client NEST and examples

--- a/project.json
+++ b/project.json
@@ -23,7 +23,8 @@
     "Npgsql.EntityFrameworkCore.PostgreSQL": "1.0.1",
     "AMQPNetLite": "1.2.0",
     "RabbitMQ.Client": "4.1.0-rc2",
-    "MySql.Data.EntityFrameworkCore": "7.0.5-ir21"
+    "MySql.Data.EntityFrameworkCore": "7.0.5-ir21",
+    "NEST": "2.4.5"
   },
   "frameworks": {
     "netcoreapp1.0": {
