--- a/project.json
+++ b/project.json
@@ -7,23 +7,23 @@
   "dependencies": {
     "xunit": "2.1.0",
     "dotnet-test-xunit": "1.0.0-*",
-    "NetMQ": "4.0.0-rc5",
+    "NetMQ": "4.0.0-*",
     "System.Reactive": "3.0.0",
     "System.Reactive.Core": "3.0.0",
     "System.Reactive.Interfaces": "3.0.0",
     "System.Reactive.Linq": "3.0.0",
     "System.Reactive.PlatformServices": "3.0.0",
     "Microsoft.Reactive.Testing": "3.0.0",
-    "MongoDB.Driver": "2.3.0-rc1",
-    "MongoDB.Driver.Core": "2.3.0-rc1",
-    "MongoDB.Bson": "2.3.0-rc1",
+    "MongoDB.Driver": "2.3.0",
+    "MongoDB.Driver.Core": "2.3.0",
+    "MongoDB.Bson": "2.3.0",
     "Newtonsoft.Json": "9.0.1",
-    "CsvHelper": "3.0.0-beta4",
-    "StackExchange.Redis": "1.1.605",
-    "Npgsql.EntityFrameworkCore.PostgreSQL": "1.0.1",
+    "CsvHelper": "3.0.0-*",
+    "StackExchange.Redis": "1.1.608",
+    "Npgsql.EntityFrameworkCore.PostgreSQL": "1.0.2",
     "AMQPNetLite": "1.2.0",
-    "RabbitMQ.Client": "4.1.0-rc2",
-    "MySql.Data.EntityFrameworkCore": "7.0.5-ir21",
+    "RabbitMQ.Client": "4.1.0",
+    "MySql.Data.EntityFrameworkCore": "7.0.5-*",
     "NEST": "2.4.5",
     "Ngonzalez.ImageProcessorCore": "1.0.0"
   },
