--- a/project.json
+++ b/project.json
@@ -25,8 +25,7 @@
     "RabbitMQ.Client": "4.1.0",
     "MySql.Data.EntityFrameworkCore": "7.0.5-*",
     "NEST": "2.4.5",
-    "Ngonzalez.ImageProcessorCore": "1.0.0",
-    "NServiceBus": "6.0.0"
+    "Ngonzalez.ImageProcessorCore": "1.0.0"
   },
   "frameworks": {
     "netcoreapp1.0": {
