--- a/project.json
+++ b/project.json
@@ -8,27 +8,27 @@
     "xunit": "2.2.0-*",
     "dotnet-test-xunit": "2.2.0-*",
     "NetMQ": "4.0.0-*",
-    "System.Reactive": "3.1.0",
-    "System.Reactive.Core": "3.1.0",
-    "System.Reactive.Interfaces": "3.1.0",
-    "System.Reactive.Linq": "3.1.0",
-    "System.Reactive.PlatformServices": "3.1.0",
-    "Microsoft.Reactive.Testing": "3.1.0",
-    "MongoDB.Driver": "2.4.0-*",
-    "MongoDB.Driver.Core": "2.4.0-*",
-    "MongoDB.Bson": "2.4.0-*",
+    "System.Reactive": "3.1.1",
+    "System.Reactive.Core": "3.1.1",
+    "System.Reactive.Interfaces": "3.1.1",
+    "System.Reactive.Linq": "3.1.1",
+    "System.Reactive.PlatformServices": "3.1.1",
+    "Microsoft.Reactive.Testing": "3.1.1",
+    "MongoDB.Driver": "2.4.1",
+    "MongoDB.Driver.Core": "2.4.1",
+    "MongoDB.Bson": "2.4.1",
     "Newtonsoft.Json": "9.0.2-*",
     "CsvHelper": "3.0.0-*",
-    "StackExchange.Redis": "1.1.608",
-    "Npgsql.EntityFrameworkCore.PostgreSQL": "1.0.2",
-    "AMQPNetLite": "1.2.1",
+    "StackExchange.Redis": "1.2.0",
+    "Npgsql.EntityFrameworkCore.PostgreSQL": "1.1.0",
+    "AMQPNetLite": "1.2.2",
     "RabbitMQ.Client": "4.1.1",
     "MySql.Data.EntityFrameworkCore": "7.0.6-*",
-    "NEST": "2.4.6",
+    "NEST": "5.0.1",
     "Ngonzalez.ImageProcessorCore": "1.0.0",
     "Microsoft.AspNet.SignalR.Server": "3.0.0-*",
-    "Microsoft.AspNetCore.WebSockets": "0.2.0-*",
-    "MyCouch": "4.0.0-*"
+    "Microsoft.AspNetCore.WebSockets": "1.0.0",
+    "MyCouch": "4.0.0"
   },
   "frameworks": {
     "netcoreapp1.0": {
