--- a/project.json
+++ b/project.json
@@ -14,17 +14,17 @@
     "System.Reactive.Linq": "3.1.1",
     "System.Reactive.PlatformServices": "3.1.1",
     "Microsoft.Reactive.Testing": "3.1.1",
-    "MongoDB.Driver": "2.4.1",
-    "MongoDB.Driver.Core": "2.4.1",
-    "MongoDB.Bson": "2.4.1",
-    "Newtonsoft.Json": "9.0.2-*",
+    "MongoDB.Driver": "2.4.2",
+    "MongoDB.Driver.Core": "2.4.2",
+    "MongoDB.Bson": "2.4.2",
+    "Newtonsoft.Json": "9.0.1",
     "CsvHelper": "3.0.0-*",
-    "StackExchange.Redis": "1.2.0",
+    "StackExchange.Redis": "1.2.1",
     "Npgsql.EntityFrameworkCore.PostgreSQL": "1.1.0",
     "AMQPNetLite": "1.2.2",
     "RabbitMQ.Client": "4.1.1",
     "MySql.Data.EntityFrameworkCore": "7.0.6-*",
-    "NEST": "5.0.1",
+    "NEST": "5.2.0",
     "Ngonzalez.ImageProcessorCore": "1.0.0",
     "Microsoft.AspNet.SignalR.Server": "3.0.0-*",
     "Microsoft.AspNetCore.WebSockets": "1.0.0",
